# nx-systemtray-applet

./: .travis.yml  CMakeLists.txt  Messages.sh  README.md
container/: CMakeLists.txt  systemtraycontainer.cpp
container/package/: metadata.desktop
debian/: README.Debian  README.source  changelog  control  copyright  postinst  postrm
package/: metadata.desktop
package/contents/ui/: ExpandedRepresentation.qml
